[package]
name = "typed-html-browser"
version = "0.1.0"
authors = ["Logan Keenan"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-html = "0.2.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"


